--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 #game {
   max-width: 500px;
-  max-height: 400px;
+  max-height: 900px;
   background-color: #ffffff;
   color: #ffffff;
   margin: 30px auto 0px;
@@ -42,4 +42,13 @@ button {
   background-color: #feac32;
   background-image: linear-gradient(#fecc4c, #ffac33);
   border: 3px solid #feac32;
+}
+
+#img {
+  max-height: 500px;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
