--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   --black-clr: #1c1c1c;
   --grey-clr: #808a9f;
   --green-clr: #6c7d47;
+  --border-radius: 10px;
 }
 
 body {
@@ -19,6 +20,8 @@ body {
   color: var(--green-clr);
   padding: 10px;
   text-align: center;
+  margin-bottom: 10px;
+  border-radius: var(--border-radius);
 }
 
 .title {
@@ -33,7 +36,8 @@ body {
   background: var(--parchment-clr-dark);
   color: #ffffff;
   margin: 30px auto 0px;
-  padding: 10px;
+  padding: 20px;
+  border-radius: var(--border-radius);
 }
 
 #controls,
@@ -43,10 +47,13 @@ body {
   color: var(--green-clr);
   display: flex;
   justify-content: center;
+  border-radius: var(--border-radius);
 }
 
 #controls {
   gap: 10px;
+  margin-bottom: 10px;
+  margin-top: 2px;
 }
 
 #monsterStats {
